Apply suggestions from code review

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -875,7 +875,7 @@ msgid ""
 msgstr ""
 "No se pierde ninguna capacidad de depuración, ya que el contexto de la "
 "excepción original permanece disponible en caso de ser necesario (por "
-"ejemplo, si una librería suprime detalles importantes y valiosos de forma "
+"ejemplo, si una biblioteca suprime detalles importantes y valiosos de forma "
 "incorrecta)"
 
 #: ../Doc/whatsnew/3.3.rst:528
@@ -1054,12 +1054,12 @@ msgid ""
 "ratio will shift in order to make the standard library more portable."
 msgstr ""
 "La intención de ``sys.implementation`` es consolidar dentro de un espacio de "
-"nombres, la implementación específica de datos usado por la librería "
+"nombres, la implementación específica de datos usado por la biblioteca "
 "estándar. Esto permite que diferentes implementaciones de python puedan "
-"compartir código de la librería estándar de manera más fácil. En su estado "
+"compartir código de la biblioteca estándar de manera más fácil. En su estado "
 "inicial, ``sys.implementation`` contiene solo una pequeña porción de los "
 "datos específicos de la implementación. Con el tiempo esta proporción "
-"cambiará para hacer que la librería estándar sea más portable.."
+"cambiará para hacer que la biblioteca estándar sea más portable.."
 
 #: ../Doc/whatsnew/3.3.rst:660
 msgid ""
