Finalizando cambios y ajustando palabras

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -247,7 +247,7 @@ msgstr ""
 "los problemas de propiedad y duración de los campos asignados dinámicamente "
 "en la estructura de Py_buffer que ha dado lugar a varios informes de "
 "bloqueo. Además, se han corregido varias funciones que se bloquearon o "
-"devolvieron resultados incorrectos para entradas no contigua o "
+"retornaron resultados incorrectos para entradas no contigua o "
 "multidimensional."
 
 #: ../Doc/whatsnew/3.3.rst:150
@@ -1006,8 +1006,8 @@ msgid ""
 "bound arguments, which considerably simplifies writing decorators and any "
 "code that validates or amends calling signatures or arguments."
 msgstr ""
-"Una nueva función :func:`inspect.signature` hace que la instrospección de "
-"las llamadas de Python sea fácil y directa. Se admite una amplia gama de "
+"Una nueva función :func:`inspect.signature` hace que la introspección de las "
+"llamadas de Python sea fácil y directa. Se admite una amplia gama de "
 "invocables: funciones python, decoradas o no, clases y objetos :func:"
 "`functools.partial`. Las Nuevas clases :class:`inspect.Signature`, :class:"
 "`inspect.Parameter` y :class:`inspect.BoundArguments` contienen información "
@@ -2244,8 +2244,8 @@ msgid ""
 "The order of arguments in the :class:`~decimal.Context` constructor has been "
 "changed to match the order displayed by :func:`repr`."
 msgstr ""
-"El órden de los argumentos en el constructor de la clase :class:`~decimal."
-"Context`, ha sido cambiado para que coincida con el órden mostrado por la "
+"El orden de los argumentos en el constructor de la clase :class:`~decimal."
+"Context`, ha sido cambiado para que coincida con el orden mostrado por la "
 "función :func:`repr`."
 
 #: ../Doc/whatsnew/3.3.rst:1185
@@ -2801,7 +2801,7 @@ msgid ""
 "file already exists. It is based on the C11 'x' mode to fopen()."
 msgstr ""
 "La función :func:`~io.open` tiene un nuevo modo ``'x'`` que puede ser usado "
-"exclusivamente para crear un nuevo archivo, y generar un :exc:"
+"exclusivamente para crear un nuevo archivo, y lanzar un :exc:"
 "`FileExistsError` si el archivo ya existe. Este está basado en el modo C11 "
 "'x' para fopen()."
 
@@ -3116,7 +3116,7 @@ msgid ""
 msgstr ""
 "La nueva función :func:`os.replace` permite cambiar el nombre de un archivo "
 "entre plataformas sobrescribiendo el destino. Con :func:`os.rename`, un "
-"archivo de destino existente se sobrescribe bajo POSIX, pero genera un error "
+"archivo de destino existente se sobrescribe bajo POSIX, pero lanza un error "
 "en Windows. (Contribución de Antoine Pitrou en :issue:`8828`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1637
@@ -3579,7 +3579,7 @@ msgid ""
 ":func:`~signal.sigwaitinfo`: wait for a signal, returning detailed "
 "information about it;"
 msgstr ""
-":func:`~signal.sigwaitinfo`: Espera una señal, devolviendo información "
+":func:`~signal.sigwaitinfo`: Espera una señal, retornando información "
 "detallada sobre ella;"
 
 #: ../Doc/whatsnew/3.3.rst:1833
@@ -3606,7 +3606,7 @@ msgid ""
 ":func:`signal.signal` and :func:`signal.siginterrupt` raise an OSError, "
 "instead of a RuntimeError: OSError has an errno attribute."
 msgstr ""
-":func:`signal.signal` y :func:`signal.siginterrupt` generan un OSError, en "
+":func:`signal.signal` y :func:`signal.siginterrupt` lanzan un OSError, en "
 "vez de un RuntimeError: OSError no tiene atributo errno."
 
 #: ../Doc/whatsnew/3.3.rst:1845
@@ -4071,7 +4071,7 @@ msgid ""
 ":func:`~time.monotonic`: Monotonic clock (cannot go backward), not affected "
 "by system clock updates."
 msgstr ""
-":func:`~time.monotonic`: Reloj monotónico (no se puede retroceder), no se vé "
+":func:`~time.monotonic`: Reloj monotónico (no se puede retroceder), no se ve "
 "afectado por la actualización del reloj del sistema."
 
 #: ../Doc/whatsnew/3.3.rst:2061
@@ -4797,10 +4797,6 @@ msgid ""
 "out of range. :exc:`OSError` is now raised if C functions :c:func:`gmtime` "
 "or :c:func:`localtime` failed."
 msgstr ""
-"Ahora si un timestamp está fuera de rango, se generan los errores :issue:"
-"`13847`, :issue:`14180`: :mod:`time` y :mod:`datetime`: :exc:`OverflowError` "
-"en vez de :exc:`ValueError`. Si las funciones de C :c:func:`gmtime` or :c:"
-"func:`localtime` fallan, se genera :exc:`OSError`."
 
 #: ../Doc/whatsnew/3.3.rst:2359
 msgid ""
@@ -5017,8 +5013,8 @@ msgid ""
 "error instead of sleeping forever.  It has always raised an error on posix."
 msgstr ""
 "El paso de valores negativos a la función :func:`time.sleep` en Windows, "
-"ahora genera un error en vez de detenerse definitivamente. Este siempre ha "
-"generado un error en posix."
+"ahora lanza un error en vez de detenerse definitivamente. Este siempre ha "
+"lanzadoun error en posix."
 
 #: ../Doc/whatsnew/3.3.rst:2446
 msgid ""
