--- a/howto/logging.po
+++ b/howto/logging.po
@@ -11,9 +11,9 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-03-19 19:34-0300\n"
+"PO-Revision-Date: 2021-03-19 20:11-0300\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1378,7 +1378,6 @@ msgid "Information about where calls were made from."
 msgstr ""
 
 #: ../Doc/howto/logging.rst:1084
-#, fuzzy
 msgid ""
 "Set ``logging._srcfile`` to ``None``. This avoids calling :func:`sys."
 "_getframe`, which may help to speed up your code in environments like PyPy "
