Ajustando traducción con warnings

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -1277,9 +1277,8 @@ msgstr ""
 ":rfc:`5424` requiere que se envíe un mensaje Unicode a un demonio syslog "
 "como un conjunto de bytes que tienen la siguiente estructura: un componente "
 "opcional puro-ASCII, seguido de una Marca de Orden de Bytes UTF-8 (*BOM* por "
-"sus siglas en inglés), seguida de codificado en Unicode usando UTF-8. "
-"(Consulte la :rfc:`sección relevante de la especificación <5424 # "
-"section-6>`.)"
+"sus siglas en inglés), seguida de codificado en Unicode usando UTF-8. (See "
+"the :rfc:`relevant section of the specification <5424#section-6>`.)"
 
 #: ../Doc/howto/logging-cookbook.rst:1695
 msgid ""
