Apply suggestions from code review
Co-authored-by: Claudia Millán <clmilneb@gmail.com>

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -828,9 +828,9 @@ msgid ""
 "strings."
 msgstr ""
 "Las llamadas de Logging (``logger.debug()``, ``logger.info()``, etc.) solo "
-"toman parámetros posicionales para el mensaje de registro real en sí, con "
-"parámetros de palabras clave que se usan solo para determinar opciones sobre "
-"cómo gestionar la llamada real a Logging (por ejemplo, el parámetro de "
+"toman parámetros posicionales para el mensaje de registro real en sí, los "
+"parámetros de palabras clave se usan solo para determinar opciones sobre "
+"cómo gestionar la llamada propiamente a Logging (por ejemplo, el parámetro de "
 "palabra clave ``exc_info`` para indicar que la información de rastreo debe "
 "registrarse, o el parámetro de palabra clave ``extra`` para indicar "
 "información contextual adicional que se agregará al registro). Por lo tanto, "
