--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -118,7 +118,7 @@ msgstr ""
 "Los *loggers* son simples objetos Python. El método :meth:`~Logger."
 "addHandler` no tiene una cuota mínima o máxima para la cantidad de gestores "
 "(*handlers*) que puede agregar. A veces será beneficioso para una aplicación "
-"registrar todos los mensajes de todas las severidades en un archivo de texto "
+"registrar todos los mensajes de todas las prioridades en un archivo de texto "
 "mientras se registran simultáneamente los errores o más en la consola. Para "
 "configurar esto, simplemente configure los gestores apropiados. Las llamadas "
 "de registro en el código de la aplicación permanecerán sin cambios. Aquí hay "
@@ -146,7 +146,7 @@ msgid ""
 "to happen is to modify the severity level of the logger and/or handler to "
 "debug."
 msgstr ""
-"La capacidad de crear nuevos gestores con filtros de mayor o menor severidad "
+"La capacidad de crear nuevos gestores con filtros de mayor o menor prioridad "
 "puede ser muy útil al escribir y probar una aplicación. En lugar de usar "
 "muchas declaraciones ``print`` para la depuración, use ``logger.debug``: a "
 "diferencia de las declaraciones de impresión, que tendrá que eliminar o "
