Arreglando palabras de pospell y powrap

--- a/whatsnew/3.0.po
+++ b/whatsnew/3.0.po
@@ -494,7 +494,7 @@ msgstr ""
 "lugar de producir datos incorrectos de forma silenciosa. También significa "
 "que incluso los usuarios de Unix tendrán que especificar el modo correcto "
 "(texto o binario) al abrir un archivo. Hay una codificación predeterminada "
-"dependiente de la plataforma, que en las plataformas Unixy se puede "
+"dependiente de la plataforma, que en las plataformas Unix se puede "
 "establecer con la variable de entorno ``LANG`` (y a veces también con "
 "algunas otras variables de entorno relacionadas con la configuración "
 "regional específicas de la plataforma). En muchos casos, pero no en todos, "
@@ -536,7 +536,7 @@ msgstr ""
 "de plataformas porque en algunas plataformas los nombres de archivos son "
 "cadenas de caracteres de bytes arbitrarios. (Por otro lado, en Windows los "
 "nombres de archivos son almacenados de forma nativa como Unicode.) Como "
-"solución alternativa, la mayoría de ls APIs (por ejemplo :func:`open` y "
+"solución alternativa, la mayoría de las APIs (por ejemplo :func:`open` y "
 "muchas otras funciones en el módulo :mod:`os`) que toman nombres de archivos "
 "aceptan tanto objetos :class:`bytes` como cadenas de caracteres, y algunas "
 "APIs tienen una forma de demandar por un valor de retorno :class:`bytes`. "
@@ -568,7 +568,7 @@ msgid ""
 msgstr ""
 ":pep:`3138`: El :func:`repr` de una cadena de caracteres ya no escapa "
 "caracteres no ASCII. Sin embargo, todavía escapa caracteres de control "
-"characters y puntos de código con status no imprimible en el estándar the "
+"caracteres y puntos de código con estado no imprimible en el estándar the "
 "Unicode."
 
 #: ../Doc/whatsnew/3.0.rst:334
@@ -910,7 +910,7 @@ msgid ""
 ":ref:`pep-0366`.  This enhances the usefulness of the :option:`-m` option "
 "when the referenced module lives in a package."
 msgstr ""
-":ref:`pep-0366`. Esto mejora la utilidad de opción :option:`-m`cuando el "
+":ref:`pep-0366`. Esto mejora la utilidad de opción :option:`-m` cuando el "
 "módulo al que se hace referencia vive en un paquete."
 
 #: ../Doc/whatsnew/3.0.rst:496
@@ -1056,7 +1056,7 @@ msgid ""
 msgstr ""
 "Se eliminaron muchos módulos antiguos. Algunos, como :mod:`gopherlib` (ya no "
 "se usa) y :mod:`md5` (reemplazado por :mod:`hashlib`), ya estaban en desuso "
-"por :pep:`4. Otros fueron eliminados como resultado de la eliminación de "
+"por :pep:`4`. Otros fueron eliminados como resultado de la eliminación de "
 "soporte para varias plataformas como Irix, BeOS y Mac OS 9 (ver :pep:`11`). "
 "Algunos módulos también fueron seleccionados para su eliminación en Python "
 "3.0 debido a la falta de uso o porque existe un mejor reemplazo. Consultar :"
@@ -1438,7 +1438,7 @@ msgid ""
 "keyword:`except` block is left."
 msgstr ""
 ":pep:`3110`: Atrapando excepciones. Ahora se debe usar :samp:`except "
-"{AlgunaExcepcion} como {variable}` en lugar de of :samp:`except "
+"{AlgunaExcepcion} como {variable}` en lugar de :samp:`except "
 "{AlgunaExcepcion}, {variable}`. Además, la *variable* es específicamente "
 "eliminada cuando el bloque :keyword:`except` se deja."
 
@@ -1832,9 +1832,9 @@ msgid ""
 msgstr ""
 "(Todavía utilizando 2.6:) Activar el modificador de línea de comandos :"
 "option:`!-3`. Esto habilita las advertencias sobre las características que "
-"se eliminarán (o cambiarán) en 3.0. Ejecutar el conjunto de tests de nuevo y "
-"corregir el código sobre el que se recibe advertencias hasta que no queden "
-"advertencias y todos los tests sigan pasando."
+"se eliminarán (o cambiarán) en 3.0. Ejecutar el conjunto de pruebas de nuevo "
+"y corregir el código sobre el que se recibe advertencias hasta que no queden "
+"advertencias y todas las pruebas sigan pasando."
 
 #: ../Doc/whatsnew/3.0.rst:913
 msgid ""
@@ -1847,7 +1847,7 @@ msgstr ""
 "fuente. (Consultar :ref:`2to3-reference` para obtener más información sobre "
 "esta herramienta.) Ejecutar el resultado de la traducción en Python 3.0. "
 "Corregir manualmente los problemas restantes, solucionando problemas hasta "
-"que todos los tests vuelvan a pasar."
+"que todos las pruebas vuelvan a pasar."
 
 #: ../Doc/whatsnew/3.0.rst:918
 msgid ""
