Arreglando palabras pospell y powrap

--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -173,7 +173,7 @@ msgid ""
 ":ref:`upgrading-optparse-code` for details on the differences from :mod:"
 "`optparse`."
 msgstr ""
-":ref:`upgrade-optparse-code` para obtener detalles sobre las diferencias "
+":ref:`upgrading-optparse-code` para obtener detalles sobre las diferencias "
 "con :mod:`optparse`."
 
 #: ../Doc/whatsnew/3.2.rst:181
@@ -252,7 +252,7 @@ msgid ""
 "object supports status checks (running or done), timeouts, cancellations, "
 "adding callbacks, and access to results or exceptions."
 msgstr ""
-"El diseño de: mod:`concurrent.futures` se inspiró en el paquete *java.util."
+"El diseño de :mod:`concurrent.futures` se inspiró en el paquete *java.util."
 "concurrent*. En ese modelo, una llamada en ejecución y su resultado están "
 "representados por un objeto :class:`~concurrent.futures.Future` que abstrae "
 "características comunes a hilos, procesos y llamadas a procedimientos "
@@ -303,7 +303,7 @@ msgid ""
 msgstr ""
 "Ambas clases comparten una interfaz común con tres métodos: :meth:"
 "`~concurrent.futures.Executor.submit` para programar un invocable y retornar "
-"un objeto :class:`~concurrent.futures.Future`; :meth:`~concurrent.futures."
+"un objeto :class:`~concurrent.futures.Future` :meth:`~concurrent.futures."
 "Executor.map` para programar muchas llamadas asincrónicas a la vez, y :meth:"
 "`~concurrent.futures.Executor.shutdown` para liberar recursos. La clase es "
 "un :term:`context manager` y se puede usar en una declaración :keyword:"
@@ -709,7 +709,7 @@ msgid ""
 "exceptions pass through::"
 msgstr ""
 "La función :func:`hasattr` funciona llamando a :func:`getattr` y detectando "
-"si se genera una excepción. Esta técnica le permite detectar métodos creados "
+"si se lanza una excepción. Esta técnica le permite detectar métodos creados "
 "dinámicamente por :meth:`__getattr__` o :meth:`__getattribute__` que de otra "
 "manera estarían ausentes en el diccionario de la clase. Anteriormente, "
 "*hasattr* detectaba cualquier excepción, posiblemente enmascarando errores "
@@ -771,8 +771,7 @@ msgid ""
 msgstr ""
 "Esto ahora está permitido. Recuerde que el objetivo de una cláusula :keyword:"
 "`except` se borra, por lo que este código que solía funcionar con Python "
-"2.6, genera un :exc: SyntaxError` con Python 3.1 y ahora funciona "
-"nuevamente::"
+"2.6, lanza un :exc:`SyntaxError` con Python 3.1 y ahora funciona nuevamente::"
 
 #: ../Doc/whatsnew/3.2.rst:564
 msgid "(See :issue:`4617`.)"
@@ -1363,7 +1362,7 @@ msgid ""
 msgstr ""
 "La clase :class:`collections.Counter` ahora tiene dos formas de resta in "
 "situ, el operador existente *-=* para `saturación de resta <https://es."
-"wikipedia.org/wiki/Aritm%C3%A9tica_de_saturaci%C3%B3n> `_ y el nuevo método :"
+"wikipedia.org/wiki/Aritm%C3%A9tica_de_saturaci%C3%B3n>`_ y el nuevo método :"
 "meth:`~collections.Counter.subtract` para la resta regular. El primero es "
 "adecuado para `muticonjunto <https://es.wikipedia.org/wiki/Multiconjunto>`_ "
 "que solo tienen recuentos positivos, y el último es más adecuado para casos "
@@ -1435,7 +1434,7 @@ msgid ""
 msgstr ""
 "Las barreras pueden trabajar con un número arbitrario de hilos. Esto es una "
 "generalización de `barrera informática <https://es.wikipedia.org/wiki/"
-"Barrera_(inform%C3%A1tica)>`_que se define solo para dos hilos."
+"Barrera_(inform%C3%A1tica)>`_ que se define solo para dos hilos."
 
 #: ../Doc/whatsnew/3.2.rst:928
 msgid ""
@@ -1482,7 +1481,7 @@ msgstr ""
 "crear una barrera con un parámetro opcional *timeout*. Luego, si el período "
 "de tiempo de espera transcurre antes de que todas las tareas predecesoras "
 "alcancen el punto de barrera, se liberan todos los hilos en espera y se "
-"genera una excepción :exc:`~threading.BrokenBarrierError`::"
+"lanza una excepción :exc:`~threading.BrokenBarrierError`::"
 
 #: ../Doc/whatsnew/3.2.rst:969
 msgid ""
@@ -1684,7 +1683,7 @@ msgid ""
 "implemented::"
 msgstr ""
 "Estas herramientas permiten definir una :term:`abstract base class` que "
-"requiere un func:`classmethod` o :func:`staticmethod` particular para ser "
+"requiere un :func:`classmethod` o :func:`staticmethod` particular para ser "
 "implementado::"
 
 #: ../Doc/whatsnew/3.2.rst:1110
@@ -1727,7 +1726,7 @@ msgstr ""
 "Al escribir un método :meth:`__repr__` para un contenedor personalizado, es "
 "fácil olvidarse de gestionar el caso en el que un miembro hace referencia al "
 "contenedor en sí. Los objetos incorporados de Python como :class:`list` y :"
-"class:` set` manejan la autorreferencia mostrando \"...\" en la parte "
+"class:`set` manejan la autorreferencia mostrando \"...\" en la parte "
 "recursiva de la cadena de representación."
 
 #: ../Doc/whatsnew/3.2.rst:1152
@@ -1801,7 +1800,7 @@ msgstr ""
 "logging, ahora hay una configuración predeterminada que usa una :class:"
 "`~logging.StreamHandler` dirigido a :attr:`sys.stderr` para eventos de nivel "
 "``WARNING`` o mayor. Anteriormente, un evento que ocurría antes de que se "
-"establezca una configuración generaba una excepción o eliminaba "
+"establezca una configuración lanzaba una excepción o eliminaba "
 "silenciosamente el evento según el valor de :attr:`logging.raiseExceptions`. "
 "El nuevo gestor predeterminado se almacena en :attr:`logging.lastResort`."
 
@@ -1813,7 +1812,7 @@ msgid ""
 msgstr ""
 "El uso de filtros ha sido simplificado. En lugar de crear un objeto :class:"
 "`~logging.Filter`, la declaración puede ser cualquier invocable Python que "
-"devuelva ``True`` o ``False``."
+"retorna ``True`` o ``False``."
 
 #: ../Doc/whatsnew/3.2.rst:1203
 msgid ""
@@ -2126,7 +2125,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.2.rst:1395
 msgid "(Available on Unix systems. Patch by Sébastien Sablé in :issue:`9862`)"
 msgstr ""
-"(Disponbile en sitemas Unix. Parche de Sébastien Sablé en :issue:`9862`)"
+"(Disponbile en sistemas Unix. Parche de Sébastien Sablé en :issue:`9862`)"
 
 #: ../Doc/whatsnew/3.2.rst:1398
 msgid "gzip and zipfile"
@@ -2323,7 +2322,7 @@ msgid ""
 msgstr ""
 "*ignore_dangling_symlinks*: cuando ``symlinks=False`` para que la función "
 "copie un archivo apuntado por un enlace simbólico, no el enlace simbólico en "
-"sí. Esta opción silenciará el error generado si el archivo no existe."
+"sí. Esta opción silenciará el error lanzado si el archivo no existe."
 
 #: ../Doc/whatsnew/3.2.rst:1546
 msgid ""
@@ -2346,7 +2345,7 @@ msgid ""
 "tarfiles or custom formats)."
 msgstr ""
 "Además, el módulo :mod:`shutil` ahora admite :ref:`operaciones de archivado "
-"<archiving-operations> `para archivos zip, archivos tar sin comprimir, "
+"<archiving-operations>` para archivos zip, archivos tar sin comprimir, "
 "archivos tar comprimidos con gzip y archivos tar bzip. Y hay funciones para "
 "registrar formatos de archivado de archivo adicionales (como archivos tar "
 "comprimidos xz o formatos personalizados)."
