Arreglando palabras pospell y powrap

--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -3175,7 +3175,7 @@ msgid ""
 ":func:`~sysconfig.get_platform` returning values like *linux-i586* or "
 "*macosx-10.6-ppc*."
 msgstr ""
-":func:`~sysconfig.get_platform` devolviendo valores como *linux-i586* o "
+":func:`~sysconfig.get_platform` retornando valores como *linux-i586* o "
 "*macosx-10.6-ppc*."
 
 #: ../Doc/whatsnew/3.2.rst:2054
@@ -3374,8 +3374,7 @@ msgid ""
 "wikipedia.org/wiki/IPv6>`_ addresses as described in :rfc:`2732`:"
 msgstr ""
 "La función :func:`~urllib.parse.urlparse` ahora admite direcciones `IPv6 "
-"<https://en.wikipedia.org/wiki/IPv6>`_ addresses como se describe en :rfc:"
-"`2732`:"
+"<https://en.wikipedia.org/wiki/IPv6>`_ como se describe en :rfc:`2732`:"
 
 #: ../Doc/whatsnew/3.2.rst:2230
 msgid ""
