powrap y palabras pendientes

--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -2502,11 +2502,11 @@ msgid ""
 "the *server_hostname* argument to :meth:`ssl.SSLContext.wrap_socket`."
 msgstr ""
 "Cuando se vincula con versiones recientes de OpenSSL, el módulo :mod:`ssl` "
-"ahora admite la extensión de Server Name Indication (SNI, en español: Indicador del nombre del servidor) para el "
-"protocolo TLS, lo que permite que varios\" hosts virtuales \"utilicen "
-"diferentes certificados en un solo puerto IP. Esta extensión solo es "
-"compatible en modo cliente y se activa pasando el argumento "
-"*server_hostname* a :meth:`ssl.SSLContext.wrap_socket`."
+"ahora admite la extensión de Server Name Indication (SNI, en español: "
+"Indicador del nombre del servidor) para el protocolo TLS, lo que permite que "
+"varios\" hosts virtuales \"utilicen diferentes certificados en un solo "
+"puerto IP. Esta extensión solo es compatible en modo cliente y se activa "
+"pasando el argumento *server_hostname* a :meth:`ssl.SSLContext.wrap_socket`."
 
 #: ../Doc/whatsnew/3.2.rst:1656
 msgid ""
@@ -2534,9 +2534,9 @@ msgid ""
 "(an integer)."
 msgstr ""
 "La versión de OpenSSL que se está utilizando ahora es accesible usando los "
-"atributos del módulo :data:`ssl.OPENSSL_VERSION` (una cadena de caracteres), :data:`ssl."
-"OPENSSL_VERSION_INFO` (una tupla de 5), y :data:`ssl.OPENSSL_VERSION_NUMBER` "
-"(un número entero)."
+"atributos del módulo :data:`ssl.OPENSSL_VERSION` (una cadena de "
+"caracteres), :data:`ssl.OPENSSL_VERSION_INFO` (una tupla de 5), y :data:`ssl."
+"OPENSSL_VERSION_NUMBER` (un número entero)."
 
 #: ../Doc/whatsnew/3.2.rst:1669
 msgid ""
@@ -2557,10 +2557,10 @@ msgid ""
 "compatibility with the nntplib version in Python 3.1, which was partly "
 "dysfunctional in itself."
 msgstr ""
-"El módulo :mod:`nntplib` tiene una implementación renovada con mejoras en "
-"la semántica de bytes y texto, así como APIs más prácticas. Estas mejoras rompen la "
-"compatibilidad con la versión nntplib en Python 3.1, que en sí misma era "
-"parcialmente disfuncional."
+"El módulo :mod:`nntplib` tiene una implementación renovada con mejoras en la "
+"semántica de bytes y texto, así como APIs más prácticas. Estas mejoras "
+"rompen la compatibilidad con la versión nntplib en Python 3.1, que en sí "
+"misma era parcialmente disfuncional."
 
 #: ../Doc/whatsnew/3.2.rst:1680
 msgid ""
@@ -3728,8 +3728,9 @@ msgid ""
 "Integer to string conversions now work two \"digits\" at a time, reducing "
 "the number of division and modulo operations."
 msgstr ""
-"Las conversiones de enteros a cadenas de caracteres ahora funcionan con dos \"dígitos\" a "
-"la vez, lo que reduce el número de operaciones de división y módulo."
+"Las conversiones de enteros a cadenas de caracteres ahora funcionan con dos "
+"\"dígitos\" a la vez, lo que reduce el número de operaciones de división y "
+"módulo."
 
 #: ../Doc/whatsnew/3.2.rst:2404
 msgid "(:issue:`6713` by Gawain Bolton, Mark Dickinson, and Victor Stinner.)"
@@ -4405,11 +4406,12 @@ msgid ""
 "correct encoding and because a variable-length encoding can fail when "
 "writing to fixed length segment of a structure."
 msgstr ""
-"func:`struct.pack` ahora permite bytes para el código del paquete de cadenas ``s``. Anteriormente, "
-"aceptaba argumentos de texto y los codificaba implícitamente en bytes usando "
-"UTF-8. Esto era problemático porque hacía suposiciones sobre la codificación "
-"correcta y porque una codificación de longitud variable puede fallar al "
-"escribir en un segmento de longitud fija de una estructura."
+"func:`struct.pack` ahora permite bytes para el código del paquete de cadenas "
+"``s``. Anteriormente, aceptaba argumentos de texto y los codificaba "
+"implícitamente en bytes usando UTF-8. Esto era problemático porque hacía "
+"suposiciones sobre la codificación correcta y porque una codificación de "
+"longitud variable puede fallar al escribir en un segmento de longitud fija "
+"de una estructura."
 
 #: ../Doc/whatsnew/3.2.rst:2698
 msgid ""
