Arreglando advertencias de construcción

--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -3010,7 +3010,7 @@ msgid ""
 "guaranteed not to change state while it is searching::"
 msgstr ""
 "Para admitir búsquedas sin la posibilidad de activar un atributo dinámico, "
-"el módulo :mod: `inspect` tiene una nueva función, :func:`~inspect."
+"el módulo :mod:`inspect` tiene una nueva función, :func:`~inspect."
 "getattr_static`. A diferencia de :func:`hasattr`, esta es una verdadera "
 "búsqueda de solo lectura, garantizada que no cambiará de estado mientras "
 "está buscando:"
@@ -3538,14 +3538,13 @@ msgid ""
 msgstr ""
 "Se ha reescrito el mecanismo para serializar la ejecución de subprocesos de "
 "Python que se ejecutan simultáneamente (generalmente conocido como :term:"
-"`GIL` o :term:`Global Interpreter Lock`). Entre los objetivos estaban los "
-"intervalos de conmutación más predecibles y la reducción de la sobrecarga "
-"debido a la contención de bloqueo y la cantidad de llamadas al sistema "
-"consiguientes. La noción de un \"intervalo de verificación\" para permitir "
-"cambios de hilo ha sido abandonada y reemplazada por una duración absoluta "
-"expresada en segundos. Este parámetro se puede ajustar a través de :func:"
-"`sys.setswitchinterval()`. Actualmente, el valor predeterminado es 5 "
-"milisegundos."
+"`GIL` o Global Interpreter Lock). Entre los objetivos estaban los intervalos "
+"de conmutación más predecibles y la reducción de la sobrecarga debido a la "
+"contención de bloqueo y la cantidad de llamadas al sistema consiguientes. La "
+"noción de un \"intervalo de verificación\" para permitir cambios de hilo ha "
+"sido abandonada y reemplazada por una duración absoluta expresada en "
+"segundos. Este parámetro se puede ajustar a través de :func:`sys."
+"setswitchinterval()`. Actualmente, el valor predeterminado es 5 milisegundos."
 
 #: ../Doc/whatsnew/3.2.rst:2322
 msgid ""
@@ -4125,7 +4124,7 @@ msgid ""
 msgstr ""
 "Hay una nueva función :c:func:`PyLong_AsLongLongAndOverflow` que es análoga "
 "a :c:func:`PyLong_AsLongAndOverflow`. Ambos sirven para convertir Python :"
-"class: `int` en un tipo nativo de ancho fijo al tiempo que brindan detección "
+"class:`int` en un tipo nativo de ancho fijo al tiempo que brindan detección "
 "de casos en los que la conversión no encaja (:issue:`7767`)."
 
 #: ../Doc/whatsnew/3.2.rst:2577
@@ -4213,7 +4212,7 @@ msgid ""
 "preferred alternative :class:`SafeConfigParser`.  In addition there are a "
 "number of smaller incompatibilities:"
 msgstr ""
-"El módulo :mod: `configparser` tiene una serie de limpiezas. El cambio "
+"El módulo :mod:`configparser` tiene una serie de limpiezas. El cambio "
 "principal es reemplazar la antigua :class:`ConfigParser` con la alternativa "
 "preferida de larga data :class:`SafeConfigParser`. Además, hay una serie de "
 "incompatibilidades menores:"
@@ -4406,8 +4405,8 @@ msgid ""
 "correct encoding and because a variable-length encoding can fail when "
 "writing to fixed length segment of a structure."
 msgstr ""
-"func:`struct.pack` ahora permite bytes para el código del paquete de cadenas "
-"``s``. Anteriormente, aceptaba argumentos de texto y los codificaba "
+":func:`struct.pack` ahora permite bytes para el código del paquete de "
+"cadenas ``s``. Anteriormente, aceptaba argumentos de texto y los codificaba "
 "implícitamente en bytes usando UTF-8. Esto era problemático porque hacía "
 "suposiciones sobre la codificación correcta y porque una codificación de "
 "longitud variable puede fallar al escribir en un segmento de longitud fija "
